# XP_Bot

./: .gitignore  Dockerfile  README.md  flake.nix  main.py  pyproject.toml  result  xp_bot.py  xp_bot_docker  xp_database.py
bot/: __init__.py  xp_bot.py
data/: message_templates.json  plus_minus.json  result  xp_data_2024.db
database_queries/: __init__.py  xp_database.py
