[project]
name = "xp-bot"
version = "1.0.0"
description = ""
authors = [{ name = "Morantoine", email = "antoine.moran@protonmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "python-telegram-bot~=22.2",
    "setuptools>=68.2.2",
    "python-dotenv>=1.0.0,<2",
    "hatchling>=1.18.0,<2",
    "flit-core>=3.9.0,<4",
    "apscheduler>=3.11.0,<4",
    "pytz~=2024.2",
]

[project.scripts]
xp-bot = "bot:start"

[tool.hatch.build.targets.sdist]
include = [
    "bot",
    "database_queries",
]

[tool.hatch.build.targets.wheel]
include = [
    "bot",
    "database_queries",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
